--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,16 @@
-sonar.projectKey=Bloody-Azimus_Testing3
-sonar.organization=bloody-azimus
+sonar.projectKey=deadman23ru_Testing2-master2
+sonar.organization=deadman23ru
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=Testing3
+sonar.projectName=Testing2-master
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # default .
-sonar.sources=app
-sonar.cfamily.gcov.reportsPath=.
-# sonar.coverageReportPaths=sonarscanner-coverage-report.xml
-# sonar.exclusions=external
+ sonar.sources=app
+ sonar.cfamily.gcov.reportsPath=.
+ #sonar.coverageReportPaths=sonarscanner-coverage-report.xml
+ sonar.exclusions=external
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
