--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=deadman23ru_Testing3-master
 sonar.organization=deadman23ru
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=Testing2-master
+#sonar.projectName=Testing3-master
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
