--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,12 +6,7 @@ sonar.organization=deadman23ru
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# default .
- sonar.sources=app
- sonar.cfamily.gcov.reportsPath=.
- #sonar.coverageReportPaths=sonarscanner-coverage-report.xml
- sonar.exclusions=external
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-sonar.host.url=https://sonarcloud.io
