--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ language:
 
 before_install:
   - pip install --user cpp-coveralls
-
 addons:
   sonarcloud:
     organization: "deadman23ru"
@@ -18,10 +17,18 @@ script:
   - ./tests/tests
 
 after_success:
-  - make clean
   - coveralls --root . -E ".*external.*" -E ".*tests.*"
+  # Wraps the compilation with the Build Wrapper to generate configuration (used
+  # later by the SonarScanner) into the "bw-output" folder
   - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
+  # And finally run the SonarCloud analysis - read the "sonar-project.properties"
+  # file to see the specific configuration
   - sonar-scanner -Dsonar.cfamily.build-wrapper-output=bw-output
+
+cache:
+  directories:
+  - '$HOME/.m2/repository'
+  - '$HOME/.sonar/cache'
 
 notifications:
   email: false
