--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,20 @@
+# must be unique in a given SonarQube instance
 sonar.projectKey=deadman23ru_Testing3-master
 sonar.organization=deadman23ru
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Testing3-master
-#sonar.projectVersion=1.0
-
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+#sonar.projectName=gtest-master
+#sonar.projectVersion=9.0
+ 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# This property is optional if sonar.modules is set. 
+#sonar.exclusions=external/**
+#sonar.cfamily.gcov.reportsPath=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+#
+#sonar.cfamily.build-wrapper-output=bw-output
+#sonar.c.file.suffixes=-
+#sonar.cpp.file.suffixes=-
+#sonar.objc.file.suffixes=-
+#sonar.host.url=https://sonarcloud.io
